###########################################################################
# Copyright (c) 2007, 2008 GeNUA mbH <info@genua.de>
#
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
# LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
###########################################################################

# gcov/lcov specific settings
LCOV_OUTPUT  = $(top_srcdir)/lcov.out
LCOV_LCOV    = @LCOV@
LCOV_GENHTML = @GENHTML@
LCOV_GCOV_ENABLED = @GCOV_ENABLED@

SUBDIRS = src test include lint

if XANOUBIS
xanoubis_mans = man/xanoubis.1 man/xanoubis_guessApp.sh.1
endif

# cleanup code coverage files generated by gcov
CLEANFILES = \
*/*.gcda \
*/*.gcdo \
*/*.gcno

# the following is needed to add man pages to the dist file
man_MANS = \
	man/anoubis_auth.3 man/anoubischat.3 man/anoubis_client.3 \
	man/anoubisctl.8 man/anoubisd.8 man/anoubis_msg.3 \
	man/anoubis_notify.3 man/anoubis_server.3 man/anoubis_sig.3 \
	man/anoubis_transaction.3 man/anoubis_ui.3 man/apn.3 man/sfssig.8 \
	$(xanoubis_mans)

EXTRA_DIST = $(man_MANS) @WXFB_PROJECT_FILES@ autogen.sh VERSION \
	split_config_h_in.pl

MAINTAINERCLEANFILES= \
	aclocal.m4 \
	Makefile.in\
	configure \
	config.log \
	config.guess \
	config.sub

REPORTS=

if HAVE_FLAWFINDER
REPORTS += flawfinder.report
flawfinder: flawfinder.report
flawfinder.report:
	for t in $(SUBDIRS); do cd $$t && make flawfinder && cd ..; done
	cat `find $(top_builddir) -name \*_flawfinder` > $@

endif

if HAVE_SPLINT
REPORTS += splint.report
splint: splint.report
splint.report:
	for t in $(SUBDIRS); do cd $$t && make splint && cd ..; done
	cat `find $(top_builddir) -name \*_splint` > $@
endif

if HAVE_LINT
REPORTS += lint.report
lint: lint.report
lint.report:
	for t in $(SUBDIRS); do cd $$t && make lint && cd ..; done
	cat `find $(top_builddir) -name \*_lint` > $@
endif

linting: $(REPORTS)
	@echo linting done

if GCOV_ENABLED
lcov: check
	$(LCOV_LCOV) --directory . --capture \
	    --output-file anoubis.info; \
	LANG=C $(LCOV_GENHTML) --prefix $(CURDIR) \
	    --output-directory $(LCOV_OUTPUT) \
	    --title "Anoubis Code Coverage: $(PACKAGE)-$(VERSION)" \
	    --show-details anoubis.info;

lcov-clean:
	$(RM) anoubis.info
	$(RM) -r $(LCOV_OUTPUT)
endif

.PHONY: flawfinder lint splint flawfinder.report lint.report splint.report
clean-local:
	rm -f $(REPORTS)
